--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,25 @@
 </head>
 <body>
 
+<!--  NAV BAR-->
+<nav class="navbar navbar navbar-static-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <% if logged_in? %>
+        <%= link_to 'Log Out', logout_path %>
+      <% else %>
+        <%= link_to 'Sign Up', signup_path %>
+        <%= link_to 'Log In', login_path %>
+      <% end %>
+    </div>
+  </div>
+</nav>
+
+<!--  BODY -->
 <%= yield %>
+
+
+<!--  FOOTER -->
 
 </body>
 </html>
