Add JavaScript to User Sign up and remove Password Confirmation

--- a/app/views/shared/_signup.html.erb
+++ b/app/views/shared/_signup.html.erb
@@ -1,6 +1,13 @@
 <%= form_for user do |f| %>
   <div>
-    <%= f.text_field :name, placeholder: 'First & Last Name' %>
+    <%= f.text_field :name, placeholder: 'Name', autocomplete: :off %>
+  </div>
+
+  <div>
+    <%= f.text_field :username, placeholder: 'Username', autocomplete: :off %>
+    <p id='username-url'>
+      This will be your profile page: portfolio-app.com/<span>USERNAME</span>
+    </p>
   </div>
 
   <div>
@@ -9,23 +16,6 @@
 
   <div>
     <%= f.password_field :password, placeholder: 'Password' %>
-  </div>
-
-  <div>
-    <%= f.password_field :password_confirmation, placeholder: 'Confirm Password' %>
-  </div>
-
-  <div>
-    <%= f.label :status, 'Are you a developer?' %>
-    <%= f.check_box :status, {}, 'developer' %>
-  </div>
-
-  <div>
-    <%= f.text_field :github_url, placeholder: 'GitHub Profile: https://github.com/username' %>
-  </div>
-
-  <div>
-    <%= f.text_field :linked_in_url, placeholder: 'LinkedIn Profile: www.linkedin.com/in/username' %>
   </div>
 
   <div>
