--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,32 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>DeveloperPortfolioApp</title>
-  <%= stylesheet_link_tag    'application', media: 'all' %>
-  <%= javascript_include_tag 'application' %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+  <head>
+    <title>DeveloperPortfolioApp</title>
+    <%= stylesheet_link_tag    'application', media: 'all' %>
+    <%= javascript_include_tag 'application' %>
+    <%= csrf_meta_tags %>
+  </head>
 
-<!--  NAV BAR-->
-<nav class="navbar navbar navbar-static-top">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <% if logged_in? %>
-        <%= link_to 'Log Out', logout_path %>
-      <% else %>
-        <%= link_to 'Sign Up', signup_path %>
-        <%= link_to 'Log In', login_path %>
-      <% end %>
-    </div>
-  </div>
-</nav>
-
-<!--  BODY -->
-<%= yield %>
-
-
-<!--  FOOTER -->
-
-</body>
+  <body>
+    <%= render 'shared/navbar' %>
+    <%= yield %>
+    <%= render 'shared/footer' %>
+  </body>
 </html>
